Fix grid overflow issue due to gap on About

--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ p {
 }
 
 .line {
+  display: block;
   background: var(--blue);
   height: 2px;
   border-radius: var(--radius-1);
@@ -971,12 +972,15 @@ svg.squiggle path {
 .about.grid {
   padding: var(--size-4);
   grid-template-columns: repeat(12, 1fr);
-  gap: var(--size-fluid-4);
+  row-gap: var(--size-fluid-4);
   margin-bottom: var(--size-fluid-6);
+  /* TODO: Make Responsive Layout. MAX WIDTH SET TO RESTRICT TO MOBILE DESIGN FOR MIDTERM ONLY */
+  max-width: 500px;
 }
 
 .about-h1 {
   /* grid-column: span 12; */
+  max-width: 500px;
   grid-column: 1 / 12;
   font-weight: var(--font-weight-1);
   text-transform: uppercase;
@@ -1067,10 +1071,6 @@ svg.squiggle path {
 } */
 
 @media (min-width: 472px) {
-  .square {
-    /* grid-column: span 10; */
-  }
-
   .about-one, .about-three {
     grid-column: 1 / 10;
   }
@@ -1087,11 +1087,18 @@ svg.squiggle path {
 
 .resume h1 {
   margin-bottom: var(--size-6);
+  font-weight: var(--font-weight-1);
+  text-transform: uppercase;
+  text-align: left;
+  font-size: clamp(3.5rem, 15vw, 5.5rem);
+  font-weight: var(--font-weight-1);
+  line-height: .85;
+  letter-spacing: var(--font-letterspacing-0);
 }
 
 .embed-container {
   width: 100%;
-  height: 100vh;
+  height: 80dvh;
   margin-bottom: var(--size-8);
   box-shadow: var(--shadow-2);
 }
